# poet

./: README.md  pyproject.toml
poet/plug/: plug.py  poet.py
