[tool.poetry]
name = "poetry-poet"
version = "0.1.10"
description = "Poetic tooling for Poetry."
authors = ["Phillip Sitbon <phillip.sitbon@gmail.com>"]
readme = "README.md"

packages = [
    { include = "poet" }
]

[tool.poetry.plugins."poetry.plugin"]
poet = "poet.plug.plug:PoetPlugin"

[tool.poetry.plugins."poetry.application.plugin"]
poet = "poet.plug.poet:PoetApplicationPlugin"

[tool.poetry.scripts]
poet = "poetry.console.application:main"

[tool.poetry.dependencies]
python = "^3.7"
poetry = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
